Temporary about us fix
the about us page was broken on desktop (the amount of words in each description changed the format, this is fixed when they are all vertical and looks good on mobile too (which is our main concern)

--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -18,6 +18,15 @@
     font-style: normal;
 }
 
+#content-desktop {display: block;}
+#content-mobile {display: none;}
+
+@media screen and (max-width: 768px) {
+
+#content-desktop {display: none;}
+#content-mobile {display: block;}
+
+
 /*
  * Custom translucent site header
  */
